<resources>
    <string name="welcome">Welcome!</string>
    <string name="ask_question">Ask</string>
    <string name="back_button1">Back</string>
    <string name="app_name">Magic 8 Ball</string>
    <string name="company">Company: Matel</string>
    <string name="about2">About: Why Magic?</string>
    <string name="clicker_title">Speed Clicker</string>
    <string name="ttt_title">How Does it Work?</string>
    <string name="about">About: Why Magic 8 Ball?</string>
    <string name="lifespan">Lifespan: 1950-Present</string>
    <string name="magic_title">Magic 8 Ball: The Game</string>
    <string name="enter_question">Enter your question here!</string>
    <string name="magic_8_ball_question">Ask your question here!</string>
    <string name="inventors">Inventors: Albert C. Carter and Abe Bookman</string>
    <string name="click_ball">You can even click the ball to ask the question!</string>
    <string name="after_typing_q">After typing in your question, click this button to ask it!</string>
    <string name="after_reading_tutorial">After reading the tutorial, click here to go to the game!</string>

    <string name="horiz_line">━━━━━━━━━━</string>
    <string name="a_brief_history">A Brief History:





       Inspired by a spirit writing device, Albert C. Carter came up with the idea of a Magic 8 Ball toy. Carter tried to bring the device to stock in a toy
 store in the 1940s, getting the attention of a store owner named Max Levinson. Levinson was aided
by his brother-in-law Abe Bookman. Bookman patented the spherical device. Before the patent was
granted, Carter had passed away. The patent was then granted in 1948 where Bookman kept making
improvements. The Magic 8 Ball was then presented in stores, first as a paper weight, and now as an
old-time toy for children (Wikipedia).</string>

</resources>