<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg2">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:layout_centerInParent="true"
            android:text="@string/back_button1"
            android:textColor="@color/black" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/about_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:text="@string/about2"
            android:textAlignment="center"
            android:textSize="40dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="35dp">
        </Space>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="17dp"
            android:text="@string/inventors" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="17dp"
            android:text="@string/company" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="17dp"
            android:text="@string/lifespan" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp">
        </Space>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="18dp"
            android:text="@string/a_brief_history"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp">
        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/accarter">
            </ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/abe">
            </ImageView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>