<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Magic8BallGame">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"

            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/magic_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/ask_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="473dp"
            android:backgroundTint="@color/blue"
            android:text="@string/ask_question"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.273"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_header"
            app:layout_constraintVertical_bias="0.233"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="378dp"
            android:layout_marginTop="86dp"
            android:layout_marginBottom="-90dp"
            android:backgroundTint="@color/blue"
            android:text="@string/back_button1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/ask_button"
            app:layout_constraintEnd_toStartOf="@+id/instructions_header"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.996"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="272dp"
            android:layout_height="83dp"
            android:src="@drawable/shadow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.824"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/magic_8_ball"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:src="@drawable/magicball"></ImageView>

    <TextView
        android:id="@+id/display_answer"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/magic_8_ball_question"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_input_text"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scrollbars="none"
            android:maxLines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>