<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsScreen">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/magic_8_ball_question" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/back_button1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.956" />

        <TextView
            android:id="@+id/instructions_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"

            android:ems="10"
            android:inputType="textPersonName"
            android:text="Tutorial"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/ask_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="473dp"
            android:backgroundTint="@color/blue"
            android:text="Ask"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.273"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_header"
            app:layout_constraintVertical_bias="0.233"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="272dp"
            android:layout_height="83dp"
            android:src="@drawable/shadow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.824"
            tools:ignore="MissingConstraints"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="92dp"
            android:layout_height="51dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.705"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="113dp"
            android:layout_height="47dp"
            android:text="@string/enter_question"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="123dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="103dp"
            android:layout_height="71dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="90dp"
            android:text="@string/after_typing_q"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.557" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="60dp"
            android:layout_height="58dp"
            android:src="@drawable/ic_baseline_arrow_upward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.809" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="125dp"
            android:layout_height="94dp"
            android:text="@string/click_ball"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="63dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.706"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.956" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="101dp"
            android:layout_height="107dp"
            android:text="@string/after_reading_tutorial"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.988" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/magic_8_ball"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:src="@drawable/magicball"></ImageView>

    <TextView
        android:id="@+id/display_answer"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/magic_8_ball_question"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_input_text"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scrollbars="none"
            android:maxLines="1"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>